--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -12,14 +12,11 @@
 {% block page_favicon_large %}{{ static('img/thunderbird/favicon-196.png') }}{% endblock %}
 {% block page_ios_icon %}{{ static('img/thunderbird/ios-icon-180.png') }}{% endblock %}
 
-{% block body_class %}sky{% endblock %}
-
-{% block global_nav %}{% endblock %}
-
 {% block site_header %}
   <header id="masthead">
 
   {% block site_header_logo %}
+    {{ svg('logo-wordmark') }}
     <h2><a href="{{ url('thunderbird.index') }}">{{ high_res_img('thunderbird/template/logo-wordmark.png', {'alt':'Thunderbird', 'width': '281', 'height': '66'}) }}</a></h2>
   {% endblock %}
 
@@ -102,10 +99,6 @@
     </ul>
   </nav>
   {% endblock %}
-
-  {% block alt_header %}{% endblock %}
-
-  {% block subnav %}{% endblock %}
 
   {% block breadcrumbs %}{% endblock %}
 
