--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -3,5 +3,13 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 @import "base/variables.less";
+@import "base/colors.less";
+@import "base/containers.less";
+@import "base/display.less";
+@import "base/effects.less";
 @import "base/flex.less";
-@import "base/spacings.less";
+@import "base/objects.less";
+@import "base/overflow.less";
+@import "base/positions.less";
+@import "base/sizing.less";
+@import "base/spacing.less";
