--- a/assets/less/base/display.less
+++ b/assets/less/base/display.less
@@ -2,8 +2,8 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-each(@colors, #(@k, @v) {
-    .@{v} {
-        display: @k;
-    }
+each(@display, #(@k, @v) {
+  .@{v} {
+    display: @k;
+  }
 });
