--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -2,14 +2,22 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+// Base Utility Classes
 @import "base/variables.less";
+@import "base/fonts.less";
 @import "base/colors.less";
+@import "base/borders.less";
 @import "base/containers.less";
 @import "base/display.less";
 @import "base/effects.less";
 @import "base/flex.less";
+@import "base/lists.less";
 @import "base/objects.less";
 @import "base/overflow.less";
 @import "base/positions.less";
 @import "base/sizing.less";
 @import "base/spacing.less";
+
+// Custom Components
+@import "components/links.less";
+@import "components/buttons.less";
