--- a/assets/less/base/lists.less
+++ b/assets/less/base/lists.less
@@ -2,16 +2,6 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-// Box Shadow
-each(@shadow, #(@k, @v) {
-  .@{v} {
-    box-shadow: @k;
-  }
-});
-
-// Opacity
-each(@opacity, #(@k, @v) {
-  .@{v} {
-    opacity: @k;
-  }
-});
+.list-none {
+  list-style-type: none;
+}
