--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -17,6 +17,7 @@
 @import "base/positions.less";
 @import "base/sizing.less";
 @import "base/spacing.less";
+@import "base/backgrounds.less";
 
 // Custom Components
 @import "components/links.less";
