--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -20,3 +20,109 @@
     .rounded-xs
   );
 }
+
+// Product download buttons
+.download-button {
+  .ios-download,
+  .linux-arm-download,
+  .unrecognized-download,
+  .unsupported-download,
+  .unsupported-download-osx,
+  .nojs-download {
+    display: none;
+  }
+}
+
+// OS detection
+.download-button .os_winsha1,
+.download-button .os_win64,
+.download-button .os_linux,
+.download-button .os_linux64,
+// Uncomment this to enable the win64 download buttons:
+// .win7up.x86.x64 .download-button .os_win,
+.android .download-button-desktop,
+.windows.arm .download-button .os_win,
+.linux.arm .download-button .os_linux,
+.linux.x86.x64 .download-list .os_linux,
+.download-button .os_win,
+.download-button .os_osx,
+.download-button .os_android,
+.download-button .os_ios,
+.no-js .download-list,
+.other .download-list {
+  display: none !important;
+}
+
+// Uncomment this to enable the win64 download buttons:
+// .win7up.x86.x64 .download-button .os_win64,
+.linux .download-button .os_linux,
+.linux.x86.x64 .download-button .os_linux64,
+.windows .download-button .os_win,
+.osx .download-button .os_osx,
+.android .download-button .os_android,
+.download-button-android .os_android,
+.android .download-button-desktop .download-list,
+.android .download-button-desktop small.os_win,
+.download-button-ios .os_ios,
+.ios .download-button .os_ios,
+.ios .download-button .ios-download,
+.ios .download-button-desktop .download-list,
+.other .download-button-android .download-list,
+.other .download-button small.os_win {
+  display: block !important;
+}
+
+.windows.arm .download-button .unsupported-download,
+.linux.arm .download-button .linux-arm-download,
+.oldwin .download-button .unsupported-download,
+.oldmac .download-button .unsupported-download {
+  display: block;
+  max-width: 250px;
+}
+
+// Hide the privacy link if platform is unsupported.
+.windows.arm .download-button .fx-privacy-link,
+.linux.arm .download-button .fx-privacy-link,
+.oldwin .download-button .fx-privacy-link,
+.oldmac .download-button .fx-privacy-link {
+  display: none;
+}
+
+.android .download-button-desktop,
+.ios .download-button-desktop,
+.no-js .download-button {
+  .nojs-download {
+    display: block;
+  }
+}
+
+.other .download-button {
+  .unrecognized-download {
+    display: block;
+  }
+}
+
+// Android architecture detection
+.download-button .download-list .os_android.x86,
+.download-button .download-other.os_android .api-15,
+.android.x86 .download-button .download-list .os_android.armv7up,
+.android.x86 .download-button .download-other.os_android .x86 {
+  display: none !important;
+}
+
+.android.x86 .download-button .download-list .os_android.x86 {
+  display: block !important;
+}
+
+.android.x86 .download-button .download-other.os_android .armv7up {
+  display: inline !important;
+}
+
+// IE on Windows XP, Server 2003, Vista need sha-1 button
+.windows.sha-1 .download-button .os_win {
+  display: none !important;
+}
+
+.windows.sha-1 .download-button .os_winsha1 {
+  display: block !important;
+}
