--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -26,7 +26,7 @@
 
       {% block site_header_nav %}
       <nav id="nav-main" role="navigation">
-        <ul id="nav-main-menu" class="list-none flex items-center text-white font-md">
+        <ul id="nav-main-menu" class="list-none p-0 flex items-center text-white font-md">
           <li>
             <a href="{{ url('thunderbird.features') }}" class="nav-link">
               {{_('Features')}}
