--- a/website/_includes/download-button.html
+++ b/website/_includes/download-button.html
@@ -30,7 +30,7 @@
   <p class="linux-arm-download">
     {{ _('Please follow <a href="%(url)s">these instructions</a> to install Thunderbird.')|format(url='https://support.mozilla.org/kb/installing-thunderbird-linux') }}
   </p>
-  <ul class="download-list">
+  <ul class="download-list list-none p-0">
     {% for plat in builds %}
       <li class="os_{{ plat.os }}{% if plat.arch %} {{ plat.arch }}{% endif %}">
         <a class="download-link button {{button_color}}"
@@ -57,9 +57,9 @@
     {% endfor %}
   </ul>
   <small class="download-other download-other-desktop os_linux os_linux64 os_osx os_win os_winsha1">
-    <a href="{{ thunderbird_url('all', channel) }}">{{ _('Systems &amp; Languages') }}</a> |
+    <a href="{{ thunderbird_url('all', channel) }}">{{ _('Systems &amp; Languages') }}</a> &bull;
     {% if channel != 'alpha' %}{# Earlybird release notes are not available yet #}
-    <a href="{{ thunderbird_url('releasenotes', channel) }}">{{ _('What’s New') }}</a> |
+      <a href="{{ thunderbird_url('releasenotes', channel) }}">{{ _('What’s New') }}</a> &bull;
     {% endif %}
     <a href="{{ url('privacy.notices.thunderbird') }}">{{ _('Privacy') }}</a>
   </small>
