Basic header style completed

--- a/assets/less/base/backgrounds.less
+++ b/assets/less/base/backgrounds.less
@@ -41,3 +41,11 @@ each(@background-size, #(@k, @v) {
   background: linear-gradient(135deg, #f23d5c 0%, #b92f51 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f23d5c', endColorstr='#b92f51', GradientType=1);
 }
+
+.bg-download-button {
+  background: #058B00;
+  background: -moz-linear-gradient(-45deg, #21B711 0%, #058B00 100%);
+  background: -webkit-linear-gradient(-45deg, #21B711 0%, #058B00 100%);
+  background: linear-gradient(135deg, #21B711 0%, #058B00 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#21B711', endColorstr='#058B00', GradientType=1);
+}
