--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -21,6 +21,25 @@
   );
 }
 
+.btn-download {
+  &:extend(
+    .text-white,
+    .font-md,
+    .font-semibold,
+    .no-underline,
+    .uppercase,
+    .inline-block,
+    .pt-4,
+    .pb-4,
+    .pl-7,
+    .pr-7,
+    .mb-5,
+    .bg-download-button,
+    .rounded-xs,
+    .shadow
+  );
+}
+
 // Product download buttons
 .download-button {
   .ios-download,
