--- a/assets/less/components/links.less
+++ b/assets/less/components/links.less
@@ -5,3 +5,11 @@
 .nav-link {
   &:extend(.ml-6, .mr-6, .text-white, .font-semibold, .no-underline);
 }
+
+.small-link {
+  &:extend(.ml-1, .mr-1, .text-white, .no-underline);
+}
+
+.inline-link {
+  &:extend(.font-semibold, .underline, .text-white);
+}
